Specify Viewport Width in Percentages to Fix Horizontal Scrollbar

--- a/browser/styles/entry.styl
+++ b/browser/styles/entry.styl
@@ -5,7 +5,7 @@ mDesktopWidth = 1024px
 
 .entry
 
-    width 100vw
+    width 100%
     background-color cream
     padding-bottom 2rem
 
