--- a/browser/styles/footer.styl
+++ b/browser/styles/footer.styl
@@ -2,7 +2,7 @@
 
     padding 1.5rem
     text-align center
-    width 100vw
+    width 100%
     margin-bottom 1rem
 
     ul
