--- a/browser/styles/index.styl
+++ b/browser/styles/index.styl
@@ -21,7 +21,7 @@ mMobileWidth = 640px
 .about
 
     padding-top 2rem
-    width 100vw
+    width 100%
     background-color slate
     .contents
         margin 3rem auto
